eda/kustomize/confluent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confluent-ingress
  namespace: confluent
  labels:
    ingress.ctoaas.co/managed: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: confluent
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: controlcenter
            port:
              name: external
